--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "d3-scale-chromatic": "^3.1.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.552.0",
+    "motion": "^12.23.26",
     "next": "^14.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
