--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "^14.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-force-graph-2d": "^1.29.0",
     "recharts": "^2.12.0",
     "tailwind-merge": "^3.3.1"
   },
